# src/db/search/handler.go
@@ -18,14 +18,14 @@ type Search struct {
 type character struct {
 	ID           int         `json:"id" example:"7960"`
 	Name         string      `json:"name" example:"Marie"`
-	OriginalName null.String `json:"original_name" example:"null"`
-	ImageURL     null.String `json:"image_url" example:"https://cdn.bongo.best/characters/7960/82736d1f-fa95-4f6e-ae78-f9422f065202_thumb.png"`
-	ImageURLCrop null.String `json:"image_url_crop" example:"https://cdn.bongo.best/characters/7960/82736d1f-fa95-4f6e-ae78-f9422f065202_thumb.png"`
+	OriginalName null.String `json:"original_name" swaggertype:"string" example:"null"`
+	ImageURL     null.String `json:"image_url" swaggertype:"string" example:"https://cdn.bongo.best/characters/7960/82736d1f-fa95-4f6e-ae78-f9422f065202_thumb.png"`
+	ImageURLCrop null.String `json:"image_url_crop" swaggertype:"string" example:"https://cdn.bongo.best/characters/7960/82736d1f-fa95-4f6e-ae78-f9422f065202_thumb.png"`
 	Nsfw         bool        `json:"nsfw" example:"false"`
 	SeriesNsfw   bool        `json:"series_nsfw" example:"false"`
 	Game         bool        `json:"game" example:"false"`
 	Western      bool        `json:"western" example:"false"`
-	Series       null.String `json:"series" example:"Persona 4"`
+	Series       null.String `json:"series" swaggertype:"string" example:"Persona 4"`
 	SeriesID     int         `json:"series_id" example:"2240"`
 }
 
